hot-fix: Fixed range value labels overlapping on fixed range input

--- a/shared/components/Range/range.module.scss
+++ b/shared/components/Range/range.module.scss
@@ -75,8 +75,6 @@
       }
 
       &__label {
-        position: absolute;
-
         width: fit-content;
         max-width: 3rem;
 
